--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
       <path d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1" />
     </svg></a>
-    <footer class="d-flex  flex-wrap justify-content-between align-items-start">  
+    <footer class="d-flex flex-wrap justify-content-between container-fluid">  
         <div class="d-flex row col-3 align-items-baseline justify-content-center">
           <img src="./images/carita naranja.png" id="caritaPerroFooter" alt="logo franco pet shop pequeño">
         </div>
